--- a/client/main.html
+++ b/client/main.html
@@ -1,8 +1,12 @@
 <head>
-  <base href="/">
-  <title>Documents</title>
+    <base href="/">
+    <title>Documents</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="./theme.css">
+    <link rel="stylesheet" href="./styles.css">
+    <script src="https://cdn.ckeditor.com/4.6.1/full/ckeditor.js"></script>
 </head>
 
 <body>
-  <my-app></my-app>
+<my-app></my-app>
 </body>
